# isolated-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  download-rootfs.sh
.cargo/: config
examples/: shell.rs
src/: command.rs  lib.rs  ls.rs
tests/: smoke.rs
